# CountyInformatorBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: docker-compose.postgres-redis.yml  pyproject.toml
backend/docker/: Dockerfile  backend_entrypoint.sh
backend/docker/debug/: Dockerfile.debug  backend_entrypoint_debug.sh
backend/docker/local/: Dockerfile.local  backend_entrypoint_local.sh
backend/src/cities/: admin.py  async_client.py  error_constants.py  models.py  repository.py  schemas.py  services.py
backend/src/core/: api_constants.py  async_client.py  cache.py  celery.py  exceptions.py  models_constants.py  settings.py  sync_client.py  urls.py
backend/src/countries/: admin.py  client.py  error_constants.py  models.py  repository.py  schemas.py  services.py  tasks.py
backend/src/currencies/: admin.py  apps.py  client.py  error_constants.py  models.py  schemas.py  service.py  tasks.py
backend/src/weather/: apps.py  async_client.py  schemas.py  services.py  tasks.py
bot/: pyproject.toml
bot/docker/: Dockerfile  bot_entrypoint.sh
bot/src/: main.py
bot/src/cities/: buttons.py  callback_constants.py  handlers.py  schemas.py  service.py  states.py  text_before_buttons.py  text_on_buttons.py  texts.py
bot/src/core/: client.py  config.py  error_constants.py  middleware.py
bot/src/countries/: buttons.py  callback_constants.py  handlers.py  schemas.py  service.py  states.py  text_before_buttons.py  text_on_buttons.py  texts.py
bot/src/currencies/: handlers.py  schemas.py  service.py  states.py  text_before_buttons.py  texts.py
bot/src/menu/: buttons.py  handlers.py  (+3 more)
(+34 files in other folders)
